--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation 'com.github.coderbuck:viewbinding-ktx:1.0.0'
 
     testImplementation 'junit:junit:4.13'
